--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 		<header>
 			<h1>AP Java: Variables</h1>
 		</header>
-		<p>If you are taking this class, you've written programs before in some language like JavaScript or Python. 
-			In many ways Java programming is similar, but you will notice immediately
-			that the basic Java "Hello, World!" program looks pretty confusing and complicated. Here's a Java program that prints 
-			"Hello, World!". Press the <em>Run</em> button and the program output should appear to the right of the code in what is called
-			the <em>console</em>.
+		<p>Think of a variable as a place to store a value that you will use later. Variables get their name because they
+		can <em>vary</em> or change. If you studied JavaScript or Python before, you are going to notice something different
+		about Java. Variables have different <em>types</em> and every Java type has size limits. For example, integers are limited
+	        to values between -2,147,483,648 and 2,147,483,647. A good way to think of Java variables is like a parking space. Parking
+	        spaces have different types that can accomidate different sized vehicles.
+			
+			
+Every Java variable has a type and a name
+
 
 		<p><iframe src="https://trinket.io/embed/java/9498fd9bee" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		
