--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 		about Java. Variables have different <em>types</em> and every Java type has size limits. For example, integers are limited
 	        to values between -2,147,483,648 and 2,147,483,647. A good way to think of Java variables is like a parking space. Parking
 	        spaces have different types that can accomidate different sized vehicles.
+		<br><img src="variables1.png">
 			
 			
-Every Java variable has a type and a name
+		<p>Every Java variable has a type and a name
 
 
 		<p><iframe src="https://trinket.io/embed/java/9498fd9bee" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
