--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	        to values between -2,147,483,648 and 2,147,483,647. A good way to think of Java variables is like a parking space. Parking
 	        spaces have different types that can accomidate different sized vehicles.
 		<br><img src="variables1.png">
+		<figcaption>Just like parking spaces, Java variables come in different sizes with different limits</figcaption>
 			
 			
 		<p>Every Java variable has a type and a name
