--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		can <em>vary</em> or change. If you studied JavaScript or Python before, you are going to notice something different
 		about Java. Variables have different <em>types</em> and every Java type has size limits. For example, integers are limited
 	        to values between -2,147,483,648 and 2,147,483,647. A good way to think of Java variables is like a parking space. Parking
-	        spaces have different types that can accomidate different sized vehicles.
-		<br><img src="variables1.png">
-		<figcaption>Just like parking spaces, Java variables come in different sizes with different limits</figcaption>
-			
+	        spaces have different types that can accomodate different sized vehicles.
+		<br><center><img src="variables1.png">
+		<figcaption>Just like parking spaces, Java variables come in different sizes that can accomodate different values</figcaption>
+		</center>	
 			
 		<p>Every Java variable has a type and a name
 
