--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<h1>AP Java: Variables</h1>
 		</header>
 		<p>Think of a variable as a place to store a value that you will use later. Variables get their name because they
-		can <em>vary</em> or change. If you studied JavaScript or Python before, you are going to notice something different
+		can <em>vary</em> or change. If you previously learned JavaScript or Python, you are going to notice something different
 		about Java. Variables have different <em>types</em> and every Java type has size limits. For example, integers are limited
 	        to values between -2,147,483,648 and 2,147,483,647. A good way to think of Java variables is like a parking space. Parking
 	        spaces have different types that can accomodate different sized vehicles.
