--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<figcaption><em>Just like parking spaces, Java variables come in different sizes that can accomodate different values</em></figcaption>
 		</center>	
 			
-		<p>Every Java variable has a type and a name
+		<p>Parking spaces will containe different vehicles at different times, so some parking spaces are labeled to make it
+		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every variable
+		has a name.
 
 
 		<p><iframe src="https://trinket.io/embed/java/9498fd9bee" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
