--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 		<p>Parking spaces will containe different vehicles at different times, so some parking spaces are labeled to make it
 		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every variable
 		has a name.
-
+		
+		<br><center><img src="variables2.png">
+		<figcaption><em>Every Java variable has a name. In our parking space analogy we could say that <code>G210</code> is the </em>name<em>
+		of this parking space</em></figcaption>
+		</center>
 
 		<p><iframe src="https://trinket.io/embed/java/9498fd9bee" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		
