--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		</center>	
 			
 		<p>Parking spaces will containe different vehicles at different times, so some parking spaces are labeled to make it
-		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every variable
-		has a name.
+		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every Java variable
+			has also has a <em>name</em>.
 		
 		<br><center><img src="variables2.png">
 		<figcaption><em>Every Java variable has a name. In our parking space analogy we could say that <code>G210</code> is the </em>name<em>
