--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<figcaption><em>Every Java variable has a name. In our parking space analogy we could say that <code>G210</code> is the </em>name<em>
 		of this parking space</em></figcaption>
 		</center>
-
+		<h2>Variable declarations</h2>
 		<p><iframe src="https://trinket.io/embed/java/9498fd9bee" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		
 </body>
