--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 		<figcaption><em>Just like parking spaces, there are different <em>types</em> of Java variables
 		that can accomodate different values</em></figcaption>
 		</center>	
+		<p>Run the program below and you will get an error. The program is attempting to print an integer that is too large.
 			
+		<p><iframe src="https://trinket.io/embed/java/063e633008" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+		
 		<p>Parking spaces will containe different vehicles at different times, so some parking spaces are labeled to make it
 		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every Java variable
 			has also has a <em>name</em>.
@@ -27,8 +30,9 @@
 		<figcaption><em>Every Java variable has a name. In our parking space analogy we could say that <code>G210</code> is the </em>name<em>
 		of this parking space</em></figcaption>
 		</center>
-		<h2>Variable declarations</h2>
-		<p><iframe src="https://trinket.io/embed/java/9498fd9bee" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		
+		
+		
+		<h2>Variable declarations</h2>
 </body>
 </html>
