--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 		<p>Think of a variable as a place to store a value that you will use later. Variables get their name because they
 		can <em>vary</em> or change. If you previously studied JavaScript or Python, you are going to notice something different
 		about Java. Variables have different <em>types</em> and every Java type has size limits. For example, integers are limited
-	        to values between -2,147,483,648 and 2,147,483,647. A good way to think of Java variables is like a parking space. Parking
+	        to values between -2,147,483,648 and 2,147,483,647. Run the program below and you will get an error.
+		The program is attempting to print an integer that is too large.
+			
+		<p><iframe src="https://trinket.io/embed/java/063e633008" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+			
+		<p>A good way to think of Java variables is like a parking space. Parking
 	        spaces have different types that can accomodate different sized vehicles.
 		<br><center><img src="variables1.png">
 		<figcaption><em>Just like parking spaces, there are different <em>types</em> of Java variables
 		that can accomodate different values</em></figcaption>
 		</center>	
-		<p>Run the program below and you will get an error. The program is attempting to print an integer that is too large.
-			
-		<p><iframe src="https://trinket.io/embed/java/063e633008" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		
 		<p>Parking spaces will containe different vehicles at different times, so some parking spaces are labeled to make it
 		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every Java variable
