--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		can <em>vary</em> or change. If you previously studied JavaScript or Python, you are going to notice something different
 		about Java. Variables have different <em>types</em> and every Java type has size limits. For example, integers are limited
 	        to values between -2,147,483,648 and 2,147,483,647. Run the program below and you will get an error.
-		The program is attempting to print an integer that is too large.
+		The program is attempting to print the integer <code>123456789101112131415</code> which is too large.
 			
 		<p><iframe src="https://trinket.io/embed/java/063e633008" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 			
