--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		that can accomodate different values</em></figcaption>
 		</center>	
 		
-		<p>Parking spaces will containe different vehicles at different times, so some parking spaces are labeled to make it
+		<p>Parking spaces will contain different vehicles at different times, so some parking spaces are labeled to make it
 		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every Java variable
 			has also has a <em>name</em>.
 		
