--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 		<br><center><img src="variables1.png">
 		<figcaption><em>Just like parking spaces, there are different <em>types</em> of Java variables
 		that can accomodate different values</em></figcaption>
-		</center>	
+		</center>
+		<p>For this class, you need to know 5 basic (aka  “primitive”) types:
+		<UL><code><li>int
+			<li>float 
+			<li>double 
+			<li>boolean 
+			<li>char</ul>
+
 		
 		<p>Parking spaces will contain different vehicles at different times, so some parking spaces are labeled to make it
 		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every Java variable
