--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<figcaption><em>Just like parking spaces, there are different <em>types</em> of Java variables
 		that can accomodate different values</em></figcaption>
 		</center>
-		<p>For this class, you need to know 5 basic (aka  “primitive”) types:
+		<p>For this class, you need to know 5 basic (also called <em>primitive</em>) types:
+
 		<UL><code><li>int
 			<li>float 
 			<li>double 
