--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 		</center>
 		<p>For this class, you need to know 5 basic (also called <em>primitive</em>) types:
 
-		<UL><code><li>int
+		<UL><b><code><li>int
 			<li>float 
 			<li>double 
 			<li>boolean 
-			<li>char</ul>
+			<li>char</code></b></ul>
 
 		
 		<p>Parking spaces will contain different vehicles at different times, so some parking spaces are labeled to make it
