--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
 		<figcaption><em>Just like parking spaces, there are different <em>types</em> of Java variables
 		that can accomodate different values</em></figcaption>
 		</center>
-		<p>For this class, you need to know 5 basic (also called <em>primitive</em>) types:
-
-		<UL><b><code><li>int
-			<li>float 
-			<li>double 
-			<li>boolean 
-			<li>char</code></b></ul>
+		<p>For this class, you need to know 5 basic (also called <em>primitive</em>) types:<b><code>int float double boolean 
+			</code></b> and	<b><code>char</code></b></ul>
 
 		
 		<p>Parking spaces will contain different vehicles at different times, so some parking spaces are labeled to make it
