--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 		that can accomodate different values</em></figcaption>
 		</center>
 		<p>For this class, you need to know 5 basic (also called <em>primitive</em>) types: <b><code>int float double boolean 
-			</code></b> and	<b><code>char</code></b></ul>
+			</code></b> and	<b><code>char</code></b>.
+		<ul><li><code>int</code> holds a single integer value between -2,147,483,648 and 2,147,483,647
+		<li>float a decimal value with up to 7 digits
+		<li>double a decimal value with up to 15 digits
+		<li>A boolean can only hold values that evaluate to either true or false
+		<li>char holds a single letter, digit, space or punctuation mark and must be enclosed in single quotes, like this: 'G'</li>
+
 
 		
 		<p>Parking spaces will contain different vehicles at different times, so some parking spaces are labeled to make it
