--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<ul><li><code>int</code> holds a single integer value between -2,147,483,648 and 2,147,483,647
 		<li><code>float</code> a decimal value with up to 7 digits
 		<li><code>double</code> a decimal value with up to 15 digits
-		<li>A <code>boolean</code> can only hold values that evaluate to either true or false
+		<li>A <code>boolean</code> can only hold values that are either <code>true</code> or <code>false</code>
 		<li><code>char</code> holds a single letter, digit, space or punctuation mark and must be enclosed in single quotes,
 		like this: <code>'G'</code></ul>
 
