--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<header>
 			<h1>AP Java: Variables</h1>
 		</header>
+		<h2>Variable types and sizes</h2>
 		<p>Think of a variable as a place to store a value that you will use later. Variables get their name because they
 		can <em>vary</em> or change. If you previously studied JavaScript or Python, you are going to notice something different
 		about Java. Variables have different <em>types</em> and every Java type has size limits. For example, integers are limited
