--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		like this: <code>'G'</code></ul>
 
 
-		
+		<h2>Variable names</h2>
 		<p>Parking spaces will contain different vehicles at different times, so some parking spaces are labeled to make it
 		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every Java variable
 			has also has a <em>name</em>.
