--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
 		
 		<br><center><img src="variables2.png">
 		<figcaption><em>Every Java variable has a name. In our parking space analogy we could say that <code>G210</code> is the </em>name<em>
-		of this parking space</em></figcaption>
+			of this parking space</em></figcaption></center>
+		<p>You can pretty much choose any name you want for a variable with a few limitations. Variable names cannot 
+			<ul><li>start with a number
+			<li>contain a space
+			<li>have a special meaning in Java</ul>
+		<p>Words in Java that have a special meaning are called <em>reserved words</em> or <em>keywords</em>. Java has about 50 reserved words or keywords
+			that you are not allowed to use as variable names such as <code>public</code>, <code>class</code>, <code>static</code>, <code>void</code>, <code>int</code> …
+
+		
+		<p>
 		</center>
 		
 		
