--- a/index.html
+++ b/index.html
@@ -49,12 +49,22 @@
 		<p>Words in Java that have a special meaning are called <em>reserved words</em> or <em>keywords</em>. Java has about 50 reserved words or keywords
 			that you are not allowed to use as variable names such as <code>public</code>, <code>class</code>, <code>static</code>, <code>void</code>, <code>int</code> …
 
-		
+		<p>Because a Java variable name can’t have spaces, a style called <em>camelCase</em> is usually used for variable names 
+			with more than one word. <em>camelCase</em> capitalizes the first letter of each word except the first word.
+		Some examples are <code>firstName</code> and <code>numberOfDogs</code>.
+ 		Java variable names are case-sensitive, so <code>firstName</code> is not the same as <code>firstname</code> or <code>FirstName</code>.
+
 		<p>
 		</center>
 		
 		
 		
 		<h2>Variable declarations</h2>
+		The Java statement that sets up a variable is called a declaration
+Here’s an example declaration
+int num;
+The first word of the declaration is the type 
+The second word is the name that the programmer chooses
+
 </body>
 </html>
