--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<h2>Variable declarations</h2>
 		The Java statement that sets up a variable is called a declaration
 Here’s an example declaration
-int num;
+<h2><xmp><mark class="green">int</mark> <mark class="orange">num</mark>;</xmp></h2>
 The first word of the declaration is the type 
 The second word is the name that the programmer chooses
 
