--- a/index.html
+++ b/index.html
@@ -60,11 +60,17 @@
 		
 		
 		<h2>Variable declarations</h2>
-		The Java statement that sets up a variable is called a declaration
-Here’s an example declaration
-<h2><xmp><mark class="green">int</mark> <mark class="orange">num</mark>;</xmp></h2>
-The first word of the declaration is the type 
-The second word is the name that the programmer chooses
+		The Java statement that sets up a variable is called a declaration. Here’s an example declaration
+		<h2><xmp><mark class="green">int</mark> <mark class="orange">num</mark>;</xmp></h2>
+		The <mark class="green">first word</mark> of the declaration is the <em>. The <mark class="orange">second word</mark>
+		is the <em>name that the programmer chooses. You can pretty much choose any name you want for a variable with a few
+		limitations. Variable names cannot 
+		<ul><li>start with a number</li>
+		<li>contain a space</li>
+		<li>have a special meaning in Java</li></ul>
+		Java has about 50 <em>reserved words</em> or <em>keywords</em> that you are not allowed to use as variable names
+		such as <code>public</code>, <code>class</code>, <code>static</code>, <code>void</code>, <code>int</code> …
+
 
 </body>
 </html>
