--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 		
 		<h2>Variable declarations</h2>
 		The Java statement that sets up a variable is called a declaration. Here’s an example declaration
-		<h2><xmp><mark class="green">int</mark> <mark class="orange">num</mark>;</xmp></h2>
-		The <mark class="green">first word</mark> of the declaration is the <em>. The <mark class="orange">second word</mark>
+		<h2><code><mark class="green">int</mark> <mark class="orange">num</mark>;</code></h2>
+		The <mark class="green">first word</mark> of the declaration is the <em>type</em>. The <mark class="orange">second word</mark>
 		is the <em>name that the programmer chooses. You can pretty much choose any name you want for a variable with a few
 		limitations. Variable names cannot 
 		<ul><li>start with a number</li>
