--- a/index.html
+++ b/index.html
@@ -61,15 +61,21 @@
 		
 		<h2>Variable declarations</h2>
 		The Java statement that sets up a variable is called a declaration. Here’s an example declaration
-		<h2><code><mark class="green">int</mark> <mark class="orange">num</mark>;</code></h2>
+		<h1><code><mark class="green">int</mark> <mark class="orange">num</mark>;</code></h1>
 		The <mark class="green">first word</mark> of the declaration is the <em>type</em>. The <mark class="orange">second word</mark>
-		is the <em>name that the programmer chooses. You can pretty much choose any name you want for a variable with a few
+is the <em>n	name</em> that the programmer chooses. You can pretty much choose any name you want for a variable with a few
 		limitations. Variable names cannot 
 		<ul><li>start with a number</li>
 		<li>contain a space</li>
 		<li>have a special meaning in Java</li></ul>
 		Java has about 50 <em>reserved words</em> or <em>keywords</em> that you are not allowed to use as variable names
 		such as <code>public</code>, <code>class</code>, <code>static</code>, <code>void</code>, <code>int</code> …
+		
+		<p>Because a Java variable name can’t have spaces, a style called <em>camelCase</em> is usually used for variable names
+		with more than one word. <em>camelCase</em> capitalizes the first letter of each word except the first word
+Examples: firstName, numberOfDogs
+ Java variable names are case-sensitive, so firstName is not the same as firstname or FirstName.
+
 
 
 </body>
