--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ is the <em>n	name</em> that the programmer chooses. You can pretty much choose a
 		<p><iframe src="https://trinket.io/embed/java/612c6bf560" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		<p>The English word <em>initial</em> means <em>first</em>. We initialize a variable by assigning (“setting it equal to”) its first value.
 		We can fix the error in the program by adding <code>num=3;</code> between lines 4 & 5. (Note it doesn't have to be <code>3</code>, 
-		we could use any integer between -2147483648 and 2147483647)
+		we could use any integer between -2147483648 and 2147483647). Add an initialization between lines 4 and 5 and run the code
+		again to verify that the error is fixed.
 
 
 </body>
