--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@ is the <em>n	name</em> that the programmer chooses. You can pretty much choose a
 		We can fix the error in the program by adding <code>num=3;</code> between lines 4 & 5. (Note it doesn't have to be <code>3</code>, 
 		we could use any integer between -2147483648 and 2147483647). Add an initialization between lines 4 and 5 and run the code
 		again to verify that the error is fixed.
+			
+		<p>You can declare and initialize a variable with one line of code like
+		<h1><code><mark class="yellow">int num</mark><mark class="green"> = 3</mark>;</code></h1>
+		Just remember that the one line of code is doing two different steps: <mark class="yellow">the declaration</mark> and
+		<mark class="green">the initialization</mark>
+
 
 
 </body>
