--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ is the <em>n	name</em> that the programmer chooses. You can pretty much choose a
 		again to verify that the error is fixed.
 			
 		<p>You can declare and initialize a variable with one line of code like
-		<h1><code><mark class="yellow">int num</mark><mark class="green"> = 3</mark>;</code></h1>
-		Just remember that the one line of code is doing two different steps: <mark class="yellow">the declaration</mark> and
+		<h1><code><mark class="blue">int num</mark><mark class="green"> = 3</mark>;</code></h1>
+		Just remember that the one line of code is doing two different steps: <mark class="blue">the declaration</mark> and
 		<mark class="green">the initialization</mark>
 
 
