--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		The Java statement that sets up a variable is called a declaration. Here’s an example declaration
 		<h1><code><mark class="green">int</mark> <mark class="orange">num</mark>;</code></h1>
 		The <mark class="green">first word</mark> of the declaration is the <em>type</em>. The <mark class="orange">second word</mark>
-is the <em>n	name</em> that the programmer chooses. You can pretty much choose any name you want for a variable with a few
+		is the <em>name</em> that the programmer chooses. You can pretty much choose any name you want for a variable with a few
 		limitations. Variable names cannot 
 		<ul><li>start with a number</li>
 		<li>contain a space</li>
@@ -90,6 +90,12 @@ is the <em>n	name</em> that the programmer chooses. You can pretty much choose a
 		Just remember that the one line of code is doing two different steps: <mark class="blue">the declaration</mark> and
 		<mark class="green">the initialization</mark>
 
+	<h2>More on Arithmetic Operators</h2>
+
+		You've already seen the operators <code>+ - * /</code>. There is another operate <code>%</code> called Modulus 
+	`	(also Mod or Modulo) that calculates the remainder of dividing two integers. Remember how you first learned division
+		with a remainder in 3rd grade?
+		<p><img src="modulus.png"></img>
 
 
 </body>
