--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
 	<h2>More on Arithmetic Operators</h2>
 
 		You've already seen the operators <code>+ - * /</code>. There is another operate <code>%</code> called Modulus 
-	`	(also Mod or Modulo) that calculates the remainder of dividing two integers. Remember how you first learned division
+		(also Mod or Modulo) that calculates the remainder of dividing two integers. Remember how you first learned division
 		with a remainder in 3rd grade?
 		<p><img src="modulus.png"></img>
-
+		<p>Run the following program and you will see that the expression <code>8/5</code> evaluates to <code>1</code> with no decimals.
+		<p><iframe src="https://trinket.io/embed/java/79ad5eb0c3" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
 </body>
 </html>
