--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
 		<p><img src="modulus.png"></img>
 		<p>Run the following program and you will see that the expression <code>8/5</code> evaluates to <code>1</code> with no decimals.
 		<p><iframe src="https://trinket.io/embed/java/79ad5eb0c3" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-
+		<p>Now add two more lines of code under lines 6 and 7 that print the remainder of 8 divided by 5.
 </body>
 </html>
