--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
 		<p><img src="modulus.png"></img>
 		<p>Run the following program and you will see that the expression <code>8/5</code> evaluates to <code>1</code> with no decimals.
 		<p><iframe src="https://trinket.io/embed/java/79ad5eb0c3" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-		<p>Now add two more lines of code under lines 6 and 7 that print the remainder of 8 divided by 5.
+		<p>Now add two more lines of code under line 8 that print the remainder of 8 divided by 5.
+			
+	<h2>Assignment</h2>
+        <p>See if you know what the result of the following expressions are.
+	<ul><li><code>12/5</code>
+	<li><code>12%5</code>
+	<li><code>23/3</code>
+	<li><code>23%3</code>
+	<li><code>6/7</code>
+	<li><code>6%7</code>
+	<li><code>6%10</code>
+	<li><code>6%78912345</code>
+	<p>Now write a program that displays the expressions and check your answers. Submit the link to your finished program by choosing 
+		<em>Share | Link</em>. Go to Google Classroom and and then choose <em>Add Link</em> to submit the assignment.
+		Don't forget to click the <em>Turn In</em> button.
 </body>
 </html>
