--- a/index.html
+++ b/index.html
@@ -110,8 +110,29 @@
 	<li><code>6%7</code>
 	<li><code>6%10</code>
 	<li><code>6%78912345</code>
-	<p>Now write a program that displays the expressions and check your answers. Submit the link to your finished program by choosing 
-		<em>Share | Link</em>. Go to Google Classroom and and then choose <em>Add Link</em> to submit the assignment.
+	<p>Now write a program that displays the expressions and check your answers. 
+		
+	<p>Write a program that traverses a list of years and displays the date of Easter for each of those years. Easter Sunday is the
+	first Sunday after the first full moon of Spring. The calculation of the date of Easter is called <em>Computus</em> in Latin.
+	One algorithm for Computus was invented by mathematician Carl Friedrich Gauss in the early 1800s and is shown below.
+	All divisions are integer divisions.
+
+	<ol><li>Let y be the year.</li>
+<li>Divide y by 19 and call the remainder a. Ignore the quotient.
+<li>Divide y by 100 to get a quotient b and a remainder c.
+<li>Divide b by 4 to get a quotient d and a remainder e.
+<li>Divide 8 * b + 13 by 25 to get a quotient g. Ignore the remainder.
+<li>Divide 19 * a + b - d - g + 15 by 30 to get a remainder h. Ignore the quotient.
+<li>Divide c by 4 to get a quotient j and a remainder k.
+<li>Divide a + 11 * h by 319 to get a quotient m. Ignore the remainder.
+<li>Divide 2 * e + 2 * j - k - h + m + 32 by 7 to get a remainder r. Ignore the quotient.
+<li>Divide h - m + r + 90 by 25 to get a quotient n. Ignore the remainder.
+<li>Divide h - m + r + n + 19 by 32 to get a remainder p. Ignore the quotient.
+<li>The month that Easter falls on is n and the date is p. For example, if n is 4 and p is 15, Easter falls on 4/15 or April 15th of that year.
+<p>Test your program by using different years and googling the date of easter for that year.You can check your calculations with the following. For 2010 a, b, c, d, e, g, h, j, k, m, r, n, p should be 15, 20, 10, 5, 0, 6, 9, 2, 2, 0, 4, 4, 4. 
+<p><iframe src="https://trinket.io/embed/java/cd5baf8bdf" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+	<p>Submit the links to your two finished programs by choosing 
+		<em>Share | Link</em>. Go to Google Classroom and and then choose <em>Add Link</em> for each program.
 		Don't forget to click the <em>Turn In</em> button.
-</body>
+	</body>
 </html>
