--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	<li><code>6/7</code>
 	<li><code>6%7</code>
 	<li><code>6%10</code>
-	<li><code>6%78912345</code>
+	<li><code>6%78912345</code></ul>
 	<p>Now write a program that displays the expressions and check your answers. 
 		
 	<p>Write a program that traverses a list of years and displays the date of Easter for each of those years. Easter Sunday is the
