--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<p><iframe src="https://trinket.io/embed/java/79ad5eb0c3" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		<p>Now add two more lines of code under line 8 that print the remainder of 8 divided by 5.
 			
-	<h2>Assignment</h2>
+<h2>Assignment: Write two programs <code>Modulus2.java</code> and <code>Computus.java</code></h2>
         <p>See if you know what the result of the following expressions are.
 	<ul><li><code>12/5</code>
 	<li><code>12%5</code>
@@ -111,8 +111,8 @@
 	<li><code>6%10</code>
 	<li><code>6%78912345</code></ul>
 	<p>Now write a program that displays the expressions and check your answers. 
-		
-	<p>Write a program that traverses a list of years and displays the date of Easter for each of those years. Easter Sunday is the
+	<p><iframe src="https://trinket.io/embed/java/79ad5eb0c3" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>	
+	<p>Write a second program that calculates and displays the date of Easter for a particular year. Easter Sunday is the
 	first Sunday after the first full moon of Spring. The calculation of the date of Easter is called <em>Computus</em> in Latin.
 	One algorithm for Computus was invented by mathematician Carl Friedrich Gauss in the early 1800s and is shown below.
 	All divisions are integer divisions.
