--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 		Just remember that the one line of code is doing two different steps: <mark class="blue">the declaration</mark> and
 		<mark class="green">the initialization</mark>
 
-	<h2>More on Arithmetic Operators</h2>
+	<h2>Modulus</h2>
 
-		You've already seen the operators <code>+ - * /</code>. There is another operate <code>%</code> called Modulus 
+		You've already seen the operators <code>+ - * /</code>. There is another operater <strong><code>%</code></strong> called Modulus 
 		(also Mod or Modulo) that calculates the remainder of dividing two integers. Remember how you first learned division
 		with a remainder in 3rd grade?
 		<p><img src="modulus.png"></img>
