--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	<p>Write a second program that calculates and displays the date of Easter for a particular year. Easter Sunday is the
 	first Sunday after the first full moon of Spring. The calculation of the date of Easter is called <em>Computus</em> in Latin.
 	One algorithm for Computus was invented by mathematician Carl Friedrich Gauss in the early 1800s and is shown below.
-	All divisions are integer divisions.
+		Your program will declare and initialize 13 <strong><code>int</code></strong> variables a, b, c, d, e, g, h, j, k, m, r, n, and p. <All divisions are integer divisions.
 
 	<ol><li>Let y be the year.</li>
 <li>Divide y by 19 and call the remainder a. Ignore the quotient.
