--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 		with more than one word. <em>camelCase</em> capitalizes the first letter of each word except the first word like
 		<code>firstName</code> or <code>numberOfDogs</code>. Java variable names are case-sensitive, so <code>firstName</code> is
 		not the same as <code>firstname</code> or <code>FirstName</code>.
-
+                <p>Here's some other example declarations using the other primitive types:
+		<h1><code><mark class="green">float</mark> <mark class="orange">x</mark>;</code></h1>
+		<h1><code><mark class="green">double</mark> <mark class="orange">taxRate</mark>;</code></h1>
+	        <h1><code><mark class="green">boolean</mark> <mark class="orange">isBig</mark>;</code></h1>
+		<h1><code><mark class="green">char</mark> <mark class="orange">letter</mark>;</code></h1>
 		<h2>Variable initializations</h2>
 		After a Java variable is declared, it needs to be <em>initialized</em>. Run the following program and you will get an 
 		error message.
@@ -99,9 +103,7 @@
 		<p>Run the following program and you will see that the expression <code>8/5</code> evaluates to <code>1</code> with no decimals.
 		<p><iframe src="https://trinket.io/embed/java/79ad5eb0c3" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		<p>Now add two more lines of code under line 8 that print the remainder of 8 divided by 5.
-			
-<h2>Assignment: Write two programs <code>Modulus2.java</code> and <code>Computus.java</code></h2>
-        <p>See if you know what the result of the following expressions are.
+		<p>See if you know what the result of the following expressions are.
 	<ul><li><code>12/5</code>
 	<li><code>12%5</code>
 	<li><code>23/3</code>
@@ -112,6 +114,11 @@
 	<li><code>6%78912345</code></ul>
 	<p>Now write a program that displays the expressions and check your answers. 
 	<p><iframe src="https://trinket.io/embed/java/67f1c694c4" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>	
+		
+<h2>Assignment: Write two programs <code>Initializations.java</code> and <code>Computus.java</code></h2>
+        <p>The following program has five error messages because the five variables have not been initialized. Initialize the variables
+	so that the program runs without any error messages.
+	<p><iframe src="https://trinket.io/embed/java/b28c8be2dd" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>	
 	<p>Write a second program that calculates and displays the date of Easter for a particular year. Easter Sunday is the
 	first Sunday after the first full moon of Spring. The calculation of the date of Easter is called <em>Computus</em> in Latin.
 	One algorithm for Computus was invented by mathematician Carl Friedrich Gauss in the early 1800s and is shown below.
