--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<p>For this class, you need to know 5 basic (also called <em>primitive</em>) types: <b><code>int float double boolean 
 			</code></b> and	<b><code>char</code></b>.
 		<ul><li><code>int</code> holds a single integer value between -2,147,483,648 and 2,147,483,647
-		<li><code>float</code> a decimal value with up to 7 digits
-		<li><code>double</code> a decimal value with up to 15 digits
+		<li><code>float</code> a decimal value with up to about 7 digits
+		<li><code>double</code> a decimal value with up to about 15 digits
 		<li>A <code>boolean</code> can only hold values that are either <code>true</code> or <code>false</code>
 		<li><code>char</code> holds a single letter, digit, space or punctuation mark and must be enclosed in single quotes,
 		like this: <code>'G'</code></ul>
@@ -93,7 +93,10 @@
 		<h1><code><mark class="blue">int num</mark><mark class="green"> = 3</mark>;</code></h1>
 		Just remember that the one line of code is doing two different steps: <mark class="blue">the declaration</mark> and
 		<mark class="green">the initialization</mark>
-
+                <p>The following program has 5 errors because the 5 variables are initialized incorrectly. Fix the five initializations
+		so that the program runs without error.
+		<p><iframe src="https://trinket.io/embed/java/7c7d4bc918" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>	
+		
 	<h2>Modulus</h2>
 
 		You've already seen the operators <code>+ - * /</code>. There is another operater <strong><code>%</code></strong> called Modulus 
