--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		like this: <code>'G'</code></ul>
 
 
-		<h2>Variable names</h2>
+		<h2>Variable declarations</h2>
 		<p>Parking spaces will contain different vehicles at different times, so some parking spaces are labeled to make it
 		easier to find your parking space later. It's the same for Java variables. In addition to a <em>type</em> every Java variable
 			has also has a <em>name</em>.
@@ -42,25 +42,13 @@
 		<br><center><img src="variables2.png">
 		<figcaption><em>Every Java variable has a name. In our parking space analogy we could say that <code>G210</code> is the </em>name<em>
 			of this parking space</em></figcaption></center>
-		<p>You can pretty much choose any name you want for a variable with a few limitations. Variable names cannot 
-			<ul><li>start with a number
-			<li>contain a space
-			<li>have a special meaning in Java</ul>
-		<p>Words in Java that have a special meaning are called <em>reserved words</em> or <em>keywords</em>. Java has about 50 reserved words or keywords
-			that you are not allowed to use as variable names such as <code>public</code>, <code>class</code>, <code>static</code>, <code>void</code>, <code>int</code> …
-
-		<p>Because a Java variable name can’t have spaces, a style called <em>camelCase</em> is usually used for variable names 
-			with more than one word. <em>camelCase</em> capitalizes the first letter of each word except the first word.
-		Some examples are <code>firstName</code> and <code>numberOfDogs</code>.
- 		Java variable names are case-sensitive, so <code>firstName</code> is not the same as <code>firstname</code> or <code>FirstName</code>.
-
-		<p>
+		
+			
 		</center>
 		
 		
 		
-		<h2>Variable declarations</h2>
-		The Java statement that sets up a variable is called a declaration. Here’s an example declaration
+		<p>The Java statement that names a variable is called a declaration. Here’s an example declaration
 		<h1><code><mark class="green">int</mark> <mark class="orange">num</mark>;</code></h1>
 		The <mark class="green">first word</mark> of the declaration is the <em>type</em>. The <mark class="orange">second word</mark>
 		is the <em>name</em> that the programmer chooses. You can pretty much choose any name you want for a variable with a few
