--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<p><iframe src="https://trinket.io/embed/java/79ad5eb0c3" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 		<p>Now add two more lines of code under line 8 that print the remainder of 8 divided by 5.
 		<p>The <a href="https://studio.code.org/s/allthethings/stage/31/puzzle/1">code.org modelo clock widget</a> is a good
-		tool for understanding modulus. See if you can use if to figure out what the result of the following expressions are.
+		tool for understanding modulus. You may find it helpful inT figuring out the result of the following expressions.
 	<ul><li><code>12/5</code>
 	<li><code>12%5</code>
 	<li><code>23/3</code>
