--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
 		like this: <code>'G'</code></ul>
 		<p><iframe src="https://trinket.io/embed/java/7c7d4bc918" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>	
 		
-	<h2>Modulus</h2>
-
-		You've already seen the operators <code>+ - * /</code>. There is another operater <strong><code>%</code></strong> called Modulus 
+	<h2>Integer Division and Modulus</h2>
+	<p>Java divides decimals differently that it does integers. Run the following program and look at the results.
+	<iframe src="https://trinket.io/embed/java/1aa839b935" width="100%" height="600" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+	<p>You've already seen the operators <code>+ - * /</code>. There is another operater <strong><code>%</code></strong> called Modulus 
 		(also Mod or Modulo) that calculates the remainder of dividing two integers. Remember how you first learned division
 		with a remainder in 3rd grade?
 		<p><img src="modulus.png"></img>
