--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<header>
 			<h1>AP Java: Variables</h1>
+			
 		</header>
 		<h2>Variable types and sizes</h2>
 		<p>Think of a variable as a place to store a value that you will use later. Variables get their name because they
@@ -124,6 +125,8 @@
 		Your program will declare and initialize 14 <strong><code>int</code></strong> variables y, a, b, c, d, e, g, h, j, k, m, r, n, and p. <All divisions are integer divisions.
 
 	<ol><li>Let y be the year.</li>
+<li>Do the following tasks</li>
+
 <li>Divide y by 19 and call the remainder a. Ignore the quotient.
 <li>Divide y by 100 to get a quotient b and a remainder c.
 <li>Divide b by 4 to get a quotient d and a remainder e.
